--- a/Login/Login.html
+++ b/Login/Login.html
@@ -19,7 +19,7 @@
     <main class="Light-Bg">
 
          <div class="Back">
-            <h3><a href="../Create.html">Voltar</a></h3>
+            <h3><a href="../Login/Create.html">Voltar</a></h3>
          </div>
 
         <div id="Logo"></div>
