--- a/History/History.html
+++ b/History/History.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico dos Torneios</title>
+    <script src="../script.js"></script>
     <script src="/script.js"></script>
-    <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./Style.css">
-    <link rel="stylesheet" href="/Main.css">
+    <link rel="stylesheet" href="../Main.css">
     <link rel="shortcut icon" href="/Imgs/Icon_PixelPlay.svg" type="image/x-icon">
    
 </head>
