--- a/Join/Join.html
+++ b/Join/Join.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="/Main.css" />
+    <link rel="stylesheet" href="../Main.css" />
     <link rel="shortcut icon" href="/Imgs/Icon_PixelPlay.svg" type="image/x-icon"/>
-    <script src="/script.js"></script>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
+    <script src="./script.js"></script>
   </head>
   <body>
 
