--- a/CreateScreen/CreateScreen2.html
+++ b/CreateScreen/CreateScreen2.html
@@ -7,9 +7,9 @@
   <title>Criar Campeonato</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="./style2.css" />
+  <link rel="stylesheet" href="./Style2.css" />
   <link rel="stylesheet" href="../Main.css" />
-  <link rel="shortcut icon" href="/Imgs/Icon_PixelPlay.svg" type="image/x-icon"/>
+  <link rel="shortcut icon" href="../Imgs/Icon_PixelPlay.svg" type="image/x-icon"/>
   <script src="../script.js"></script>
   <script src="./script.js"></script>
 </head>
@@ -58,7 +58,7 @@
   <main class="Dark-Bg">
     
     <div class="Back">
-      <h3><a href="/CreateScreen/CreateScreen1.html">Voltar</a></h3>
+      <h3><a href="./CreateScreen1.html">Voltar</a></h3>
     </div>
 
       <h1 class="form-title">Tipo do Campeonato</h1>
