--- a/History/History.html
+++ b/History/History.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./Style.css">
     <link rel="stylesheet" href="../Main.css">
-    <link rel="shortcut icon" href="/Imgs/Icon_PixelPlay.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Imgs/Icon_PixelPlay.svg" type="image/x-icon">
    
 </head>
 
@@ -59,7 +59,7 @@
     <main class="Dark-Bg">
 
         <div class="Back">
-            <h3><a href="/HomeScreenLogged/HomeScreenLogged.html">Voltar</a></h3>
+            <h3><a href="../HomeScreenLogged/HomeScreenLogged.html">Voltar</a></h3>
         </div>
 
         <h2>Histórico de Campeonatos</h2>
