--- a/Join/Join.html
+++ b/Join/Join.html
@@ -6,9 +6,9 @@
     <title>ID do Torneio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./Style.css" />
     <link rel="stylesheet" href="../Main.css" />
-    <link rel="shortcut icon" href="/Imgs/Icon_PixelPlay.svg" type="image/x-icon"/>
+    <link rel="shortcut icon" href="../Imgs/Icon_PixelPlay.svg" type="image/x-icon"/>
     <script src="../script.js"></script>
     <script src="./script.js"></script>
   </head>
@@ -57,7 +57,7 @@
 
         
       <div class="Back">
-        <h3><a href="/HomeScreenLogged/HomeScreenLogged.html">Voltar</a></h3>
+        <h3><a href="../HomeScreenLogged/HomeScreenLogged.html">Voltar</a></h3>
       </div>
 
       <div class="icon-trofeu"></div>
